Fix created by spacing (#411)

--- a/audius-client/packages/web/src/containers/upload-page/components/FinishPage.module.css
+++ b/audius-client/packages/web/src/containers/upload-page/components/FinishPage.module.css
@@ -81,6 +81,10 @@ sbuttons {
   align-items: center;
 }
 
+.createdBy {
+  margin-right: 4px;
+}
+
 .iconVerified {
   margin-left: 4px;
 }
